@@ -72,11 +72,17 @@ def test_cum_var(pca):
 def test_pcs(pca):
     assert_equal(pca.p_components.shape, (pca._n_atoms * 3, pca._n_atoms * 3))
 
+def test_pcs_n_components(u):
+    pca = PCA(u, select=SELECTION).run()
+    assert_equal(pca.p_components.shape, (pca._n_atoms * 3, pca._n_atoms * 3))
+    pca.n_components = 10
+    assert_equal(pca.p_components.shape, (pca._n_atoms * 3, 10))
+
 
 def test_different_steps(pca, u):
     atoms = u.select_atoms(SELECTION)
     dot = pca.transform(atoms, start=5, stop=7, step=1)
-    assert_equal(dot.shape, (2, atoms.n_atoms * 3))
+    assert_equal(dot.shape, (2, atoms.n_atoms*3))
 
 
 def test_transform_different_atoms(pca, u):
@@ -157,7 +163,8 @@ def test_pca_rmsip_self(pca):
     assert_almost_equal(pca.rmsip(pca), 1.0)
 
 def test_rmsip_ortho(pca):
-    value = rmsip(pca.p_components[:10], pca.p_components[10:20])
+    value = rmsip(pca.p_components[:, :10].T,
+                  pca.p_components[:, 10:20].T)
     assert_almost_equal(value, 0.0)
 
 def test_pytest_too_many_components(pca):
@@ -178,7 +185,7 @@ def test_pca_cumulative_overlap_self(pca):
 
 def test_cumulative_overlap_ortho(pca):
     pcs = pca.p_components
-    value = cumulative_overlap(pcs[11], pcs, n_components=10)
+    value = cumulative_overlap(pcs[:, 11].T, pcs.T, n_components=10)
     assert_almost_equal(value, 0.0)
 
 @pytest.mark.parametrize(
